[project]
name = "portfolio-track-asr"
version = "0.1.0"
description = ""
authors = [
    {name = "Menso",email = "menso_k@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer (>=0.24.2,<0.25.0)",
    "rich (>=15.0.0,<16.0.0)",
    "yfinance (>=1.3.0,<2.0.0)",
    "pandas (>=3.0.2,<4.0.0)",
    "numpy (>=2.4.4,<3.0.0)",
    "matplotlib (>=3.10.9,<4.0.0)"
]

[tool.poetry]
packages = [{include = "portfolio_track_asr", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
